style: fixed icon alignment

--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ input {
   border: 1px solid rgba(209, 209, 209, 1);
   outline: none;
   background: var(--white-color);
-  padding: 10px 80px 10px 10px;
+  padding: 15px 80px 15px 15px;
   border-radius: 5px;
 }
 
@@ -144,8 +144,9 @@ input[type="date"] {
 .icon {
   position: absolute;
   right: 1.5rem;
-  bottom: 34px;
+  bottom: 32px;
   display: none;
+  font-size: 1.5rem;
 }
 
 .status__message {
